--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ dependencies:
   d_dialog: ^1.0.2
   uuid: ^4.5.1
   supabase_flutter: ^2.12.0
+  http_parser: ^4.1.2
 
 dev_dependencies:
   flutter_lints: ^5.0.0
