--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,8 @@ dependencies:
   uuid: ^4.5.1
   supabase_flutter: ^2.12.0
   http_parser: ^4.1.2
+  dio: ^5.9.0
+  flutter_secure_storage: ^10.0.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
