--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,7 @@ dependencies:
   path_provider: ^2.1.5
   signalr_netcore: ^1.4.4
   firebase_storage: ^13.0.6
+  firebase_auth: ^6.1.4
 
 dev_dependencies:
   flutter_lints: ^5.0.0
