feat(auth): Implement smart input for email or phone in login step one
- Updated `LoginStepOne` to allow users to input either email or phone number.
- Added dynamic country code and flag display in the input field.
- Modified validation logic to accommodate both input types.
- Enhanced Google sign-in button functionality to trigger authentication.

fix(verify): Increase number of fields for verification code input

- Changed the number of fields from 5 to 6 in the verification code input.

chore(splash): Improve app initialization with error handling

- Added logging for app initialization steps.
- Implemented error handling to ensure the app proceeds even if initialization fails.

fix(locale): Update locale controller instantiation

- Changed from `Get.put` to `Get.find` for retrieving the `LocaleController`.

refactor(auth): Enhance custom text field widget

- Added `prefixIcon` support to `Custtextfeld` for dynamic input display.

chore(dependencies): Downgrade google_sign_in package version

- Updated `google_sign_in` dependency from 7.1.1 to 6.2.1 for compatibility.

docs: Add comprehensive guides for authentication and Google login APIs

- Created detailed documentation for dashboard authentication and Google login API usage.
- Included request/response examples and implementation details.

feat(firebase): Add phone verification API and helper functions

- Implemented API for confirming phone verification after Firebase SDK validation.
- Created helper functions for handling Google sign-in and Firebase error messages.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,5 +47,21 @@
     <true/>
     <key>UIApplicationSupportsIndirectInputEvents</key>
     <true/>
+    
+    <!-- Google Sign-In -->
+    <key>GIDClientID</key>
+    <string>612566346205-eupm9tnsocv90ijd31jgn8hehoipc4nm.apps.googleusercontent.com</string>
+    
+    <key>CFBundleURLTypes</key>
+    <array>
+      <dict>
+        <key>CFBundleTypeRole</key>
+        <string>Editor</string>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>com.googleusercontent.apps.612566346205-eupm9tnsocv90ijd31jgn8hehoipc4nm</string>
+        </array>
+      </dict>
+    </array>
   </dict>
 </plist>
