--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,27 +50,27 @@ dependencies:
   firebase_core: ^4.0.0
   # flutter_local_notifications: ^19.4.0
   cloud_firestore: ^6.0.0
-  sqflite: ^2.4.2
+  # sqflite: ^2.4.2
   # shared_preferences: ^2.5.3
   path: ^1.9.1
-  qr_flutter: ^4.1.0
-  grouped_list: ^6.0.0
+  # qr_flutter: ^4.1.0
+  # grouped_list: ^6.0.0
   url_launcher: ^6.3.2
   # dropdown_search: ^6.0.2
-  badges: ^3.1.2
+  # badges: ^3.1.2
   flutter_svg: ^2.0.13
   font_awesome_flutter: ^10.9.1
-  fluttericon: ^2.0.0
+  # fluttericon: ^2.0.0
   dartz: ^0.10.1
   google_sign_in: ^6.2.1
-  device_preview: ^1.3.1
+  # device_preview: ^1.3.1
   # responsive_builder: ^0.7.1
   image_pickers: ^2.0.6
   # mobile_scanner: ^7.0.1
   flutter_otp_text_field: ^1.5.1+1
   lottie: ^3.3.1
   # google_fonts: ^6.3.0
-  flutter_custom_clippers: ^2.1.0
+  # flutter_custom_clippers: ^2.1.0
   # roundpath: ^1.0.1
   video_player: ^2.10.0
   chewie: ^1.12.1
@@ -85,14 +85,14 @@ dependencies:
   # http_parser: ^4.1.2
   dio: ^5.9.0
   flutter_secure_storage: ^10.0.0
-  path_provider: ^2.1.5
+  # path_provider: ^2.1.5
   signalr_netcore: ^1.4.4
   firebase_storage: ^13.0.6
   firebase_auth: ^6.1.4
   awesome_notifications: ^0.10.0
 
 dev_dependencies:
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
   flutter_launcher_icons: "^0.14.4"
   flutter_test:
     sdk: flutter
