--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,7 @@ dependencies:
   firebase_storage: ^13.0.6
   firebase_auth: ^6.1.4
   awesome_notifications: ^0.10.0
+  logger: ^2.6.2
 
 dev_dependencies:
   flutter_lints: ^6.0.0
